oslab/errors.txt
sample.c: In function ‘main’:
sample.c:10:32: error: expected ‘;’ before ‘}’ token
   10 |         printf("Hello World\n")
      |                                ^
      |                                ;
   11 |  }
      |  ~                              
